fixed photo alignment

--- a/css/jacopo.css
+++ b/css/jacopo.css
@@ -284,14 +284,8 @@ header {
 }
 
 .logo {
-  opacity: ;
-  margin-bottom: 20px;
   margin-right: 20px;
   font-weight: 800;
-}
-
-.logo:hover {
-  /*text-shadow: 2px 2px 10px #3788B0;*/
 }
 
 #left {
@@ -330,8 +324,7 @@ header {
 }
 @media screen and (max-height: 800px) {
   #face {
-    bottom: auto;
-    top: 280px;
+    bottom: 0;
   }
 }
 
